--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
