se cambio una foto

--- a/adoptar.html
+++ b/adoptar.html
@@ -61,7 +61,7 @@
         <div class="availables">
             <div class="available">
                 <div class="imagen">
-                    <img src="img/luci.jpg" alt="">
+                    <img src="img/luci4k.JPG" alt="">
                 </div>
                 <div class="descripcion">
                     <ul>
