--- a/contacto.html
+++ b/contacto.html
@@ -15,11 +15,12 @@
 
     <div class="container">
         <nav class="header">
-            <div id="logo"><img src="img/logo.png" alt=""> <span>MichiSave</span></div>            
+            <div id="logo"><img src="img/logo2.png" alt=""></div>            
             <div id="links">
                 <a href="index.html" target="_parent">Inicio</a>
                 <a href="adoptar.html" target="_parent">Adoptar</a>
                 <a href="contacto.html" target="_parent">Contacto</a>
+                <a href="donar.html" target="_parent">Donar</a>
             </div>
         </nav>
 
