--- a/voluntariado.html
+++ b/voluntariado.html
@@ -20,6 +20,7 @@
                 <a href="index.html" target="_parent">Inicio</a>
                 <a href="adoptar.html" target="_parent">Adoptar</a>
                 <a href="contacto.html" target="_parent">Contacto</a>
+                <a href="donar.html" target="_parent">Donar</a>
             </div>
         </nav>
 
