--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -13,15 +14,34 @@
 
 <body>
 
-    <div class="container">
-        <nav class="header">
-            <div id="logo"><img src="img/logo2.png" alt=""></div>
-            <div id="links">
-                <a href="index.html" target="_parent">Inicio</a>
-                <a href="adoptar.html" target="_parent">Adoptar</a>
-                <a href="contacto.html" target="_parent">Contacto</a>
-                <a href="donar.html" target="_parent">Donar</a>
-            </div>
+    <div class="pagina">
+        <nav class="navbar navbar-expand-sm bg-light navbar-light modificarNavbar">
+            <a class="navbar-brand" href="#"><img src="img/logo2.png" alt=""> </a>
+
+
+            <div class="ml-auto">
+
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto ">
+                        <li class="nav-item active space">
+                            <a class="nav-link " href="index.html" target="_parent">Inicio</a>
+                        </li>
+                        <li class="nav-item active space">
+                            <a class="nav-link" href="adoptar.html" target="_parent">Adoptar</a>
+                        </li>
+                        <li class="nav-item active space">
+                            <a class="nav-link" href="contacto.html" target="_parent">Contacto</a>
+                        </li>
+                        <li class="nav-item active space">
+                            <a class="nav-link" href="donar.html" target="_parent">Donar</a>
+                        </li>
+                    </ul>
+                </div>
         </nav>
 
         <div class="title">
@@ -84,9 +104,11 @@
             </div>
         </footer>
 
-
-
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 
 </html>
