Los navbar fueron hechos en bootstrap

--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="pagina">
+    <div class="container-fluid px-0">
         <nav class="navbar navbar-expand-sm bg-light navbar-light modificarNavbar">
             <a class="navbar-brand" href="#"><img src="img/logo2.png" alt=""> </a>
 
@@ -43,10 +43,13 @@
                     </ul>
                 </div>
         </nav>
+    </div>
 
+    <div class="pagina">    
         <div class="title">
             <h1>Contactece con nosotros</h1>
         </div>
+        
         <div id="separador">
             <img src="./img/pescadito.png" alt="">
             <img src="./img/pescadito.png" alt="">
