Se modificaron los separadores

--- a/donar.html
+++ b/donar.html
@@ -47,14 +47,16 @@
                 </div>
         </nav>
 
-
         <div class="title">
             <div id="textos">
                 <h1>Donar</h1>
                   <span> Somos una organizacion sin fines de lucro, pero tu ayuda nos ayuda. </span>
             </div>
         </div>
-
+        
+        <div id="separador">
+            <hr>
+        </div>
 
         <section class="pt-5 pb-5">
             <div class="container">
