--- a/contacto.html
+++ b/contacto.html
@@ -47,13 +47,8 @@
 
     <div class="pagina">    
         <div class="title">
-            <h1>Contactece con nosotros</h1>
+            <h1>Contactese con nosotros</h1>
         </div>
-        
-        <div id="separador">
-            <hr>
-        </div>
-
         <div class="pagina">
             <div id="formulario">
                 <form action="">
