el index se hizo responsivo mediante media queries

--- a/index.html
+++ b/index.html
@@ -54,23 +54,25 @@
             <header class="title">
                 <h1>Opiniones de nuestro servicio</h1>
             </header>
-            <div class="opinion">
-                <div class="comentario">
-                    <p>Excelente servicio.</p>
+            <div class="cards">
+                <div class="opinion">
+                    <div class="comentario">
+                        <p>Excelente servicio.</p>
+                    </div>
+                    <div class="usuario"><img src="img/avatar.png" alt=""> <span>Facundo Salas</span></div>
                 </div>
-                <div class="usuario"><img src="img/avatar.png" alt=""> <span>Facundo Salas</span></div>
-            </div>
-            <div class="opinion">
-                <div class="comentario">
-                    <p>Siempre muy atentos, tengo a mi compañerito hace 3 meses.</p>
+                <div class="opinion">
+                    <div class="comentario">
+                        <p>Siempre muy atentos, tengo a mi compañerito hace 3 meses.</p>
+                    </div>
+                    <div class="usuario"><img src="img/avatar.png" alt=""> <span>Agustin Campos</span></div>
                 </div>
-                <div class="usuario"><img src="img/avatar.png" alt=""> <span>Agustin Campos</span></div>
-            </div>
-            <div class="opinion">
-                <div class="comentario">
-                    <p>Muy recomendable.</p>
+                <div class="opinion">
+                    <div class="comentario">
+                        <p>Muy recomendable.</p>
+                    </div>
+                    <div class="usuario"><img src="img/avatar.png" alt=""> <span>Alexis Hernandarias</span></div>
                 </div>
-                <div class="usuario"><img src="img/avatar.png" alt=""> <span>Alexis Hernandarias</span></div>
             </div>
 
 
