--- a/adoptar.html
+++ b/adoptar.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="pagina">
+   
         <nav class="navbar navbar-expand-sm bg-light navbar-light modificarNavbar">
             <a class="navbar-brand" href="#"><img src="img/logo2.png" alt=""> </a>
 
@@ -47,79 +47,58 @@
         <div class="title">
             <h1>Adoptar</h1>
         </div>
-        <div class="availables">
 
-            <div class="available">
-                <div class="imagen">
-                    <img src="img/freya4k.JPG" alt="">
-                </div>
-                <div class="descripcion">
-                    <ul>
-                        <li><span>Freya</span> (Hembra) </li>
-                        <li><strong>Personalidad: </strong> Mimosa</li>
-                        <li><strong>Peso: </strong> 3 kilos</li>
-                        <li><strong>Edad: </strong> 1 año</li>
-                    </ul>
-                </div>
-                <div class="links">
-                    <button>Preguntar por mi</button><button>Compartir</button>
-                </div>
+        <div class="card-deck disponibles">
+            <div class="card">
+              <img class="card-img-top" src="https://picsum.photos/200" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Freya</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Ultima actualizacion hace 3 minutos</small>
+              </div>
             </div>
-        </div>
-        <div class="availables">
-            <div class="available">
-                <div class="imagen">
-                    <img src="img/luci4k.JPG" alt="">
-                </div>
-                <div class="descripcion">
-                    <ul>
-                        <li><span>Lucifer</span> (Macho) </li>
-                        <li><strong>Personalidad: </strong> Arisco</li>
-                        <li><strong>Peso: </strong> 4 kilos</li>
-                        <li><strong>Edad: </strong> 2 año</li>
-                    </ul>
-                </div>
-                <div class="links">
-                    <button>Preguntar por mi</button><button>Compartir</button>
-                </div>
+            <div class="card">
+              <img class="card-img-top" src="https://picsum.photos/200" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Capitan</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Ultima actualizacion hace 3 minutos</small>
+              </div>
             </div>
-        </div>
-
-        <div class="availables">
-            <div class="available">
-                <div class="imagen">
-                    <img src="img/capi2.jpg" alt="">
-                </div>
-                <div class="descripcion">
-                    <ul>
-                        <li><span>Capitan</span> (Macho) </li>
-                        <li><strong>Personalidad: </strong> Mimoso</li>
-                        <li><strong>Peso: </strong> 4 kilos</li>
-                        <li><strong>Edad: </strong> 3 año</li>
-                    </ul>
-                </div>
-                <div class="links">
-                    <button>Preguntar por mi</button><button>Compartir</button>
-                </div>
+            <div class="card">
+              <img class="card-img-top" src="https://picsum.photos/200" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Lucifer</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="card-footer d-flex justify-content-around">
+                <button type="button" class="btn btn-secondary">Preguntar por mi</button>
+                <button type="button" class="btn btn-secondary">Compartir</button>
+              </div>
             </div>
-        </div>
+          </div>
 
 
         <footer class="footer">
-           
+
             <a href="https://www.facebook.com/">Facebook</a>
-            <a href="https://www.instagram.com/">Instagram</a> 
+            <a href="https://www.instagram.com/">Instagram</a>
             <a href="voluntariado.html">Unirse</a>
             <div id="redes">
                 <ul>
-                    <li><a href="https://api.whatsapp.com/send?phone=2236005531" target="_blank"><img src="./img/wp.png"></a></li>
-                </ul> 
-            </div>                  
-    </footer>  
+                    <li><a href="https://api.whatsapp.com/send?phone=2236005531" target="_blank"><img
+                                src="./img/wp.png"></a></li>
+                </ul>
+            </div>
+        </footer>
 
 
 
-    </div>
+    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
