se finalizo pagina de adoptar con bootstraps y media queries

--- a/adoptar.html
+++ b/adoptar.html
@@ -14,91 +14,116 @@
 
 <body>
 
-   
-        <nav class="navbar navbar-expand-sm bg-light navbar-light modificarNavbar">
-            <a class="navbar-brand" href="#"><img src="img/logo2.png" alt=""> </a>
+
+    <nav class="navbar navbar-expand-sm bg-light navbar-light modificarNavbar">
+        <a class="navbar-brand" href="#"><img src="img/logo2.png" alt=""> </a>
 
 
-            <div class="ml-auto">
+        <div class="ml-auto">
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto ">
-                        <li class="nav-item active space">
-                            <a class="nav-link " href="index.html" target="_parent">Inicio</a>
-                        </li>
-                        <li class="nav-item active space">
-                            <a class="nav-link" href="adoptar.html" target="_parent">Adoptar</a>
-                        </li>
-                        <li class="nav-item active space">
-                            <a class="nav-link" href="contacto.html" target="_parent">Contacto</a>
-                        </li>
-                        <li class="nav-item active space">
-                            <a class="nav-link" href="donar.html" target="_parent">Donar</a>
-                        </li>
-                    </ul>
-                </div>
-        </nav>
-
-        <div class="title">
-            <h1>Adoptar</h1>
-        </div>
-
-        <div class="card-deck disponibles">
-            <div class="card">
-              <img class="card-img-top" src="https://picsum.photos/200" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Freya</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Ultima actualizacion hace 3 minutos</small>
-              </div>
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="https://picsum.photos/200" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Capitan</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Ultima actualizacion hace 3 minutos</small>
-              </div>
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="https://picsum.photos/200" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Lucifer</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              </div>
-              <div class="card-footer d-flex justify-content-around">
-                <button type="button" class="btn btn-secondary">Preguntar por mi</button>
-                <button type="button" class="btn btn-secondary">Compartir</button>
-              </div>
-            </div>
-          </div>
-
-
-        <footer class="footer">
-
-            <a href="https://www.facebook.com/">Facebook</a>
-            <a href="https://www.instagram.com/">Instagram</a>
-            <a href="voluntariado.html">Unirse</a>
-            <div id="redes">
-                <ul>
-                    <li><a href="https://api.whatsapp.com/send?phone=2236005531" target="_blank"><img
-                                src="./img/wp.png"></a></li>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto ">
+                    <li class="nav-item active space">
+                        <a class="nav-link " href="index.html" target="_parent">Inicio</a>
+                    </li>
+                    <li class="nav-item active space">
+                        <a class="nav-link" href="adoptar.html" target="_parent">Adoptar</a>
+                    </li>
+                    <li class="nav-item active space">
+                        <a class="nav-link" href="contacto.html" target="_parent">Contacto</a>
+                    </li>
+                    <li class="nav-item active space">
+                        <a class="nav-link" href="donar.html" target="_parent">Donar</a>
+                    </li>
                 </ul>
             </div>
-        </footer>
+    </nav>
+
+    <div class="title">
+        <h1>Adoptar</h1>
+    </div>
+
+    <div class="card-deck disponibles">
+        <div class="card">
+            <img class="card-img-top" src="./img/freya.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">Freya</h4>
+                <p class="card-text">
+                <div class="lista">
+                    <ul>
+                        <li><strong>Personalidad : </strong>Mimosa</li>
+                        <li><strong>Peso : </strong>3 kilos</li>
+                        <li><strong>Edad : </strong>1 año</li>
+                    </ul>
+                </div>
+                </p>
+            </div>
+            <div class="card-footer d-flex justify-content-around botones">
+                <button type="button" class="btn botonHembra">Preguntar por mi</button>
+                <button type="button" class="btn botonHembra">Compartir</button>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="img/capi2.JPG" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">Capitan</h4>
+                <p class="card-text">
+                <div class="lista">
+                    <ul>
+                        <li><strong>Personalidad : </strong>Mimosa</li>
+                        <li><strong>Peso : </strong>3 kilos</li>
+                        <li><strong>Edad : </strong>1 año</li>
+                    </ul>
+                </div>
+                </p>
+            </div>
+            <div class="card-footer d-flex justify-content-around botones">
+                <button type="button" class="btn botonMacho">Preguntar por mi</button>
+                <button type="button" class="btn botonMacho">Compartir</button>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="img/luciChiquto.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">Lucifer</h4>
+                <p class="card-text">
+                <div class="lista">
+                    <ul>
+                        <li><strong>Personalidad : </strong>Mimosa</li>
+                        <li><strong>Peso : </strong>3 kilos</li>
+                        <li><strong>Edad : </strong>1 año</li>
+                    </ul>
+                </div>
+                </p>
+            </div>
+            <div class="card-footer d-flex justify-content-around botones">
+                <button type="button" class="btn botonMacho">Preguntar por mi</button>
+                <button type="button" class="btn botonMacho">Compartir</button>
+            </div>
+        </div>
+    </div>
+
+
+    <footer class="footer">
+
+        <a href="https://www.facebook.com/">Facebook</a>
+        <a href="https://www.instagram.com/">Instagram</a>
+        <a href="voluntariado.html">Unirse</a>
+        <div id="redes">
+            <ul>
+                <li><a href="https://api.whatsapp.com/send?phone=2236005531" target="_blank"><img
+                            src="./img/wp.png"></a></li>
+            </ul>
+        </div>
+    </footer>
 
 
 
-    
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
