--- a/adoptar.html
+++ b/adoptar.html
@@ -18,10 +18,8 @@
     <nav class="navbar navbar-expand-sm bg-light navbar-light modificarNavbar">
         <a class="navbar-brand" href="#"><img src="img/logo2.png" alt=""> </a>
 
-
-        <div class="ml-auto">
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -47,63 +45,65 @@
         <h1>Adoptar</h1>
     </div>
 
-    <div class="card-deck disponibles">
-        <div class="card">
-            <img class="card-img-top" src="./img/freya.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h4 class="card-title">Freya</h4>
-                <p class="card-text">
-                <div class="lista">
-                    <ul>
-                        <li><strong>Personalidad : </strong>Mimosa</li>
-                        <li><strong>Peso : </strong>3 kilos</li>
-                        <li><strong>Edad : </strong>1 año</li>
-                    </ul>
+    <div class="container-fluid">
+        <div class="card-deck disponibles">
+            <div class="card disponible">
+                <img class="card-img-top" src="./img/freya.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">Freya</h4>
+                    <p class="card-text">
+                    <div class="lista">
+                        <ul>
+                            <li>Mimosa</li>
+                            <li>3 kilos</li>
+                            <li>1 año</li>
+                        </ul>
+                    </div>
+                    </p>
                 </div>
-                </p>
-            </div>
-            <div class="card-footer d-flex justify-content-around botones">
-                <button type="button" class="btn botonHembra">Preguntar por mi</button>
-                <button type="button" class="btn botonHembra">Compartir</button>
-            </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top" src="img/capi2.JPG" alt="Card image cap">
-            <div class="card-body">
-                <h4 class="card-title">Capitan</h4>
-                <p class="card-text">
-                <div class="lista">
-                    <ul>
-                        <li><strong>Personalidad : </strong>Mimosa</li>
-                        <li><strong>Peso : </strong>3 kilos</li>
-                        <li><strong>Edad : </strong>1 año</li>
-                    </ul>
+                <div class="card-footer d-flex justify-content-around botones">
+                    <button type="button" class="btn botonHembra">Adoptar</button>
+                    <button type="button" class="btn botonHembra">Compartir</button>
                 </div>
-                </p>
             </div>
-            <div class="card-footer d-flex justify-content-around botones">
-                <button type="button" class="btn botonMacho">Preguntar por mi</button>
-                <button type="button" class="btn botonMacho">Compartir</button>
-            </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top" src="img/luciChiquto.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h4 class="card-title">Lucifer</h4>
-                <p class="card-text">
-                <div class="lista">
-                    <ul>
-                        <li><strong>Personalidad : </strong>Mimosa</li>
-                        <li><strong>Peso : </strong>3 kilos</li>
-                        <li><strong>Edad : </strong>1 año</li>
-                    </ul>
+            <div class="card disponible">
+                <img class="card-img-top" src="img/capi2.JPG" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">Capitan</h4>
+                    <p class="card-text">
+                    <div class="lista">
+                        <ul>
+                            <li>Mimoso</li>
+                            <li>5 kilos</li>
+                            <li>2 año</li>
+                        </ul>
+                    </div>
+                    </p>
                 </div>
-                </p>
+                <div class="card-footer d-flex justify-content-around botones">
+                    <button type="button" class="btn botonMacho">Adoptar</button>
+                    <button type="button" class="btn botonMacho">Compartir</button>
+                </div>
             </div>
-            <div class="card-footer d-flex justify-content-around botones">
-                <button type="button" class="btn botonMacho">Preguntar por mi</button>
-                <button type="button" class="btn botonMacho">Compartir</button>
-            </div>
+            <div class="card disponible">
+                <img class="card-img-top" src="img/luciChiquto.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">Lucifer</h4>
+                    <p class="card-text">
+                    <div class="lista">
+                        <ul>
+                            <li>Arisco</li>
+                            <li>2 kilos</li>
+                            <li>1 año</li>
+                        </ul>
+                    </div>
+                    </p>
+                </div>
+                <div class="card-footer d-flex justify-content-around botones">
+                    <button type="button" class="btn botonMacho">Adoptar</button>
+                    <button type="button" class="btn botonMacho">Compartir</button>
+                </div>
+            </div>            
         </div>
     </div>
 
