--- a/adoptar.html
+++ b/adoptar.html
@@ -105,6 +105,124 @@
                 </div>
             </div>            
         </div>
+        <div class="card-deck disponibles">
+            <div class="card disponible">
+                <img class="card-img-top" src="./img/freya.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">Freya</h4>
+                    <p class="card-text">
+                    <div class="lista">
+                        <ul>
+                            <li>Mimosa</li>
+                            <li>3 kilos</li>
+                            <li>1 año</li>
+                        </ul>
+                    </div>
+                    </p>
+                </div>
+                <div class="card-footer d-flex justify-content-around botones">
+                    <button type="button" class="btn botonHembra">Adoptar</button>
+                    <button type="button" class="btn botonHembra">Compartir</button>
+                </div>
+            </div>
+            <div class="card disponible">
+                <img class="card-img-top" src="img/capi2.JPG" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">Capitan</h4>
+                    <p class="card-text">
+                    <div class="lista">
+                        <ul>
+                            <li>Mimoso</li>
+                            <li>5 kilos</li>
+                            <li>2 año</li>
+                        </ul>
+                    </div>
+                    </p>
+                </div>
+                <div class="card-footer d-flex justify-content-around botones">
+                    <button type="button" class="btn botonMacho">Adoptar</button>
+                    <button type="button" class="btn botonMacho">Compartir</button>
+                </div>
+            </div>
+            <div class="card disponible">
+                <img class="card-img-top" src="img/luciChiquto.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">Lucifer</h4>
+                    <p class="card-text">
+                    <div class="lista">
+                        <ul>
+                            <li>Arisco</li>
+                            <li>2 kilos</li>
+                            <li>1 año</li>
+                        </ul>
+                    </div>
+                    </p>
+                </div>
+                <div class="card-footer d-flex justify-content-around botones">
+                    <button type="button" class="btn botonMacho">Adoptar</button>
+                    <button type="button" class="btn botonMacho">Compartir</button>
+                </div>
+            </div>            
+        </div>
+        <div class="card-deck disponibles">
+            <div class="card disponible">
+                <img class="card-img-top" src="./img/freya.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">Freya</h4>
+                    <p class="card-text">
+                    <div class="lista">
+                        <ul>
+                            <li>Mimosa</li>
+                            <li>3 kilos</li>
+                            <li>1 año</li>
+                        </ul>
+                    </div>
+                    </p>
+                </div>
+                <div class="card-footer d-flex justify-content-around botones">
+                    <button type="button" class="btn botonHembra">Adoptar</button>
+                    <button type="button" class="btn botonHembra">Compartir</button>
+                </div>
+            </div>
+            <div class="card disponible">
+                <img class="card-img-top" src="img/capi2.JPG" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">Capitan</h4>
+                    <p class="card-text">
+                    <div class="lista">
+                        <ul>
+                            <li>Mimoso</li>
+                            <li>5 kilos</li>
+                            <li>2 año</li>
+                        </ul>
+                    </div>
+                    </p>
+                </div>
+                <div class="card-footer d-flex justify-content-around botones">
+                    <button type="button" class="btn botonMacho">Adoptar</button>
+                    <button type="button" class="btn botonMacho">Compartir</button>
+                </div>
+            </div>
+            <div class="card disponible">
+                <img class="card-img-top" src="img/luciChiquto.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">Lucifer</h4>
+                    <p class="card-text">
+                    <div class="lista">
+                        <ul>
+                            <li>Arisco</li>
+                            <li>2 kilos</li>
+                            <li>1 año</li>
+                        </ul>
+                    </div>
+                    </p>
+                </div>
+                <div class="card-footer d-flex justify-content-around botones">
+                    <button type="button" class="btn botonMacho">Adoptar</button>
+                    <button type="button" class="btn botonMacho">Compartir</button>
+                </div>
+            </div>            
+        </div>
     </div>
 
 
