--- a/voluntariado.html
+++ b/voluntariado.html
@@ -66,7 +66,7 @@
                 <input type="file" class="custom-file-input" id="validatedCustomFile" required>
                 <label class="custom-file-label" for="validatedCustomFile">Subir curriculum</label>
                 <div class="invalid-feedback">Example invalid custom file feedback</div>
-              </div>
+            </div>
             <div class="form-group modificarFormGroup">
                 <div class="col-sm-10">
                     <div class="form-check">
@@ -91,7 +91,7 @@
             </div>
             <div class="form-group modificarFormGroup">
                 <div class="col-sm-10">
-                    <button type="submit" class="btn btn-secondary">Enviar</button>
+                    <button type="submit" class="btn btn-secondary button">Enviar</button>
                 </div>
             </div>
         </form>
