donar migrado a scss

--- a/donar.html
+++ b/donar.html
@@ -53,15 +53,15 @@
 
         <section class="pt-5 pb-5">
             <div class="container">
-                <div class="row">
+                <div class="row carrusel">
                     <div class="col-6 text-left">
-                        <a class="btn btn-secondary mb-3 mr-1" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+                        <a class="btn btn-secondary mb-3 mr-1 " href="#carouselExampleIndicators2" role="button" data-slide="prev">
                             <i class="fa fa-arrow-left"></i>
                         </a>
                     </div>
                     <div class="col-6 text-right">
                         
-                        <a class="btn btn-secondary mb-3 " href="#carouselExampleIndicators2" role="button" data-slide="next">
+                        <a class="btn btn-secondary mb-3  " href="#carouselExampleIndicators2" role="button" data-slide="next">
                             <i class="fa fa-arrow-right"></i>
                         </a>
                     </div>
@@ -70,28 +70,28 @@
         
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <div class="row">
+                                    <div class="row carrusel">
                                         <div class="col-md-4 mb-3">
                                             <div class="card text-center" >
-                                                <div class="card-body">
-                                                  <h5 class="card-title">$100</h5>                                                  
-                                                  <a href="#" class="btn btn-secondary">Donar</a>
+                                                <div class="card-body modificarCardBody">
+                                                  <h5 class="card-title modificarCardTitle">$100</h5>                                                  
+                                                  <a href="#" class="btn btn-secondary modificarBoton">Donar</a>
                                                 </div>
                                               </div>
                                         </div>
                                         <div class="col-md-4 mb-3">
                                             <div class="card text-center" >
-                                                <div class="card-body">
-                                                  <h5 class="card-title">$500</h5>                                                  
-                                                  <a href="#" class="btn btn-secondary">Donar</a>
+                                                <div class="card-body modificarCardBody">
+                                                  <h5 class="card-title modificarCardTitle">$500</h5>                                                  
+                                                  <a href="#" class="btn btn-secondary modificarBoton">Donar</a>
                                                 </div>
                                               </div>
                                         </div>
                                         <div class="col-md-4 mb-3">
                                             <div class="card text-center" >
-                                                <div class="card-body">
-                                                  <h5 class="card-title">$1000</h5>                                                  
-                                                  <a href="#" class="btn btn-secondary">Donar</a>
+                                                <div class="card-body modificarCardBody">
+                                                  <h5 class="card-title modificarCardTitle">$1000</h5>                                                  
+                                                  <a href="#" class="btn btn-secondary modificarBoton">Donar</a>
                                                 </div>
                                               </div>
                                         </div>
@@ -102,30 +102,30 @@
                                     <div class="row">
                                         <div class="col-md-4 mb-3">
                                             <div class="card text-center" >
-                                                <div class="card-body">
-                                                  <h5 class="card-title">$1200</h5>                                                  
-                                                  <a href="#" class="btn btn-secondary">Donar</a>
+                                                <div class="card-body modificarCardBody">
+                                                  <h5 class="card-title modificarCardTitle">$1200</h5>                                                  
+                                                  <a href="#" class="btn btn-secondary modificarBoton">Donar</a>
                                                 </div>
                                               </div>
                                         </div>
                                         <div class="col-md-4 mb-3">
                                             <div class="card text-center" >
-                                                <div class="card-body">
-                                                  <h5 class="card-title">$1500</h5>                                                  
-                                                  <a href="#" class="btn btn-secondary">Donar</a>
+                                                <div class="card-body modificarCardBody">
+                                                  <h5 class="card-title modificarCardTitle">$1500</h5>                                                  
+                                                  <a href="#" class="btn btn-secondary modificarBoton">Donar</a>
                                                 </div>
                                               </div>
                                         </div>
                                         <div class="col-md-4 mb-3">
                                             <div class="card text-center" >
-                                                <div class="card-body">
-                                                  <h5 class="card-title">Otro</h5>      
+                                                <div class="card-body modificarCardBody">
+                                                  <h5 class="card-title modificarCardTitle">Otro</h5>      
                                                   <form >
                                                     <div >
                                                       <input type="number" class="form-control" id="monto" placeholder="monto" min="0">
                                                     </div>
                                                   </form>                                            
-                                                  <a href="#" class="btn btn-secondary">Donar</a>
+                                                  <a href="#" class="btn btn-secondary modificarBoton">Donar</a>
                                                 </div>
                                               </div>
                                         </div>
