contacto migrado a scss

--- a/contacto.html
+++ b/contacto.html
@@ -45,7 +45,7 @@
         </nav>
     </div>
 
-    <div class="pagina">    
+    
         <div class="title">
             <h1>Contactese con nosotros</h1>
         </div>
@@ -104,6 +104,8 @@
 
 
         </div>
+    </div>
+        
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
