--- a/adoptar.html
+++ b/adoptar.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="adopta un gato">
+    <meta name="keywords" content="adoptar,gato,elegir,ayudar,felicidad">
+    <title>Adoptar</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/adoptar.css">
     <link rel="stylesheet" href="css/navbar.css">
