--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="contactese con nosotros">
+    <meta name="keywords" content="contacto,ubicacion,mail,telefono,mapa">
+    <title>Contacto</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="css/navbar.css">
