--- a/voluntariado.html
+++ b/voluntariado.html
@@ -16,7 +16,7 @@
 
 <body>
         <nav class="navbar navbar-expand-sm bg-light navbar-light modificarNavbar">
-            <a class="navbar-brand" href="#"><img src="img/logo2.png" alt=""> </a>
+            <a class="logo" href="index.html"><img src="img/logo2.png" alt=""></a>
 
 
             <div class="ml-auto">
@@ -26,7 +26,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse justify-content-end links" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto ">
                         <li class="nav-item active space">
                             <a class="nav-link " href="index.html" target="_parent">Inicio</a>
